--- a/application-abeille/mainwindow.ui
+++ b/application-abeille/mainwindow.ui
@@ -20,11 +20,33 @@
    <widget class="QStackedWidget" name="livre">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>10</y>
-      <width>761</width>
-      <height>461</height>
+      <x>0</x>
+      <y>0</y>
+      <width>801</width>
+      <height>481</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">#p0 {
+    background-image: url(:/img/arriere_plan1rasp.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#p1 {
+    background-image: url(:/img/arriere_plan2rasp.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#p2 {
+    background-image: url(:/img/arriere_plan3rasp.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#p3 {
+    background-image: url(:/img/arriere_plan2rasp.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}</string>
     </property>
     <property name="currentIndex">
      <number>0</number>
@@ -154,6 +176,22 @@ hr { height: 1px; border-width: 0; }
        </rect>
       </property>
       <property name="dragEnabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>120</y>
+        <width>381</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="clearButtonEnabled">
        <bool>false</bool>
       </property>
      </widget>
