--- a/application-abeille/ressource.qrc
+++ b/application-abeille/ressource.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/img">
-        <file>bouton_test.jpg</file>
-        <file>Arriere_plan_fenetre_1.png</file>
+        <file>arriere_plan2rasp.png</file>
+        <file>arriere_plan3rasp.png</file>
+        <file>arriere_plan1rasp.png</file>
     </qresource>
 </RCC>
