--- a/application-ruche/qml.qrc
+++ b/application-ruche/qml.qrc
@@ -1,11 +1,11 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-    </qresource>
-    <qresource prefix="/qml">
         <file>Page1.qml</file>
         <file>Page2.qml</file>
         <file>Page3.qml</file>
-        <file>Page4.qml</file>
+        <file>Page4A.qml</file>
+        <file>Page4U.qml</file>
+        <file>Page5.qml</file>
     </qresource>
 </RCC>
